--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -139,3 +139,9 @@ button:hover {
     background-color: rgb(46, 46, 110); 
 }
 
+.error {
+    color: red;
+    font-size: 0.875rem;
+    margin-top: 0.25rem;
+  }
+  
